# keel-browser

./: .gitignore  KEEL_BROWSER_SPEC.md  LICENSE  README.md
.github/workflows/: build.yml  security-lag.yml
branding/: README.md
branding/strings/: keel.json
ci/workflows/: security-lag.yml  upstream-watch.yml
docs/: audit-patches.sh  dev-loop.md  no-analytics.md  security-posture.md  spec-coverage.md  update-workflow.md
docs/design/: implementation.md  navbar-ideas.md  navbar-mockup.html
newtab/: index.html  script.js  style.css
patches/: 0001-keel-branding-strings.patch  0002-keel-default-prefs.patch  0003-keel-hide-brave-surfaces.patch  0004-keel-topbar-autohide.patch  0004-keel-topbar-layout.patch  0005-keel-per-tab-accent-tint.patch  0005-keel-topbar-style.patch  0006-keel-new-tab.patch  README.md
policies/: README.md  master_preferences.json
policies/linux/: keel-managed-policy.json
policies/macos/: com.brave.Browser.plist.xml
policies/windows/: keel.reg
scripts/: _lib.sh  apply-patches-tolerant.sh  apply-patches.sh  build-args.gn  build-keel.sh  build-watchdog.sh  clone-upstream.sh  install-policy.sh  package-deb.sh  render-icons.sh  repackage-brave-deb.sh  security-lag.sh  smoke-test.sh  sync-upstream.sh  upload-cache-snapshot.sh  upload-release.sh
tests/: package.json
tests/smoke/: build-contact-sheet.js  capture-design-tour.js  capture-keel-on-verity.js  capture-narrow.js  capture-policy-extras.js  capture-verity-real.js  dump-policy-dom.js  keel-overlay.script.js  preview-navbar-mockup.js  preview-newtab.js  run.js
theme/: tokens.json
